tests/unit/default/syntax-error/151-alter.x.t
---- IN ----
*|
---- OUT ----
---- ERR ----
syntax: expected <table> after `*` near `|` at position 1 - at line 1
---- EXIT ----
1
